Fix - align

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Quantico:ital,wght@1,700&display=swap");
 .nav {
-  height: 100px;
   background-color: yellow;
 }
 
