--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,4 @@
 .nav {
-    height: 100px;
     background-color: yellow;
 }
 
